// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-empty-area Prop Backgroun Style 1`] = `
<div>
  <div
    class="m-empty-area m--is-background-style-any m--is-display-mode-block m--has-content-area"
    style="min-height: 280px;"
  >
    <!---->

    <div
      class="m-empty-area__content-area"
    >
      <svg
        aria-hidden="true"
        class="m-svg m-empty-area__icon"
        height="60px"
        width="60px"
      />

      <div
        class="m-empty-area__title-area"
      >
        <p
          class="m-empty-area__title"
        >
          <strong>
            Prop background-style = 'any'
          </strong>
        </p>

        <!---->
      </div>
    </div>
  </div>

  <div
    class="m-empty-area m--is-background-style-light m--is-display-mode-block m--has-content-area"
    style="min-height: 280px;"
  >
    <!---->

    <div
      class="m-empty-area__content-area"
    >
      <svg
        aria-hidden="true"
        class="m-svg m-empty-area__icon"
        height="60px"
        width="60px"
      />

      <div
        class="m-empty-area__title-area"
      >
        <p
          class="m-empty-area__title"
        >
          <strong>
            Prop background-style = 'light'
          </strong>
        </p>

        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-empty-area Prop Button Text 1`] = `
<div
  class="m-empty-area m--is-background-style-light m--is-display-mode-block m--has-button"
  style="min-height: 280px;"
>
  <a
    class="m-link m-add m-empty-area__button m--is-unvisited m--is-button m--has-left-icon m--has-content"
    href="#"
    role="button"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="m-icon m-link__icon"
      height="24px"
      width="24px"
    >
      <!---->

      <use
        aria-hidden="true"
        class=""
      />
    </svg>

    <span
      class="m-link__text"
    >

            Prop button-text

    </span>

    <!---->
  </a>

  <!---->
</div>
`;

exports[`Storyshots modul-components|m-empty-area Prop Button Type 1`] = `
<div>
  <div
    class="m-empty-area m--is-background-style-light m--is-display-mode-block m--has-button"
    style="min-height: 280px;"
  >
    <button
      class="m-button m-empty-area__button m--is-skin-secondary"
      type="button"
    >
      <!---->

      <!---->

      <span
        class="m-button__text"
      >

            Prop button-type = button

        <!---->
      </span>

      <!---->

      <!---->
    </button>

    <!---->
  </div>

  <div
    class="m-empty-area mu-mt-lg m--is-background-style-light m--is-display-mode-block m--has-button"
    style="min-height: 280px;"
  >
    <a
      class="m-link m-add m-empty-area__button m--is-unvisited m--is-button m--has-left-icon m--has-content"
      href="#"
      role="button"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="m-icon m-link__icon"
        height="24px"
        width="24px"
      >
        <!---->

        <use
          aria-hidden="true"
          class=""
        />
      </svg>

      <span
        class="m-link__text"
      >

            Prop button-type = add-button

      </span>

      <!---->
    </a>

    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-empty-area Prop Display Mode 1`] = `
<div>
  <div
    class="m-empty-area m--is-background-style-light m--is-display-mode-inline m--has-button m--has-content-area"
    style="min-height: 280px;"
  >
    <a
      class="m-link m-add m-empty-area__button m--is-unvisited m--is-button m--has-left-icon m--has-content"
      href="#"
      role="button"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="m-icon m-link__icon"
        height="24px"
        width="24px"
      >
        <!---->

        <use
          aria-hidden="true"
          class=""
        />
      </svg>

      <span
        class="m-link__text"
      >

            Add

      </span>

      <!---->
    </a>

    <div
      class="m-empty-area__content-area"
    >
      <svg
        aria-hidden="true"
        class="m-svg m-empty-area__icon"
        height="60px"
        width="60px"
      />

      <div
        class="m-empty-area__title-area"
      >
        <p
          class="m-empty-area__title"
        >
          <strong>
            Prop display-mode = 'inline'
          </strong>
        </p>

        <!---->
      </div>
    </div>
  </div>

  <div
    class="m-empty-area mu-mt-lg m--is-background-style-light m--is-display-mode-block m--has-button m--has-content-area"
    style="min-height: 280px;"
  >
    <a
      class="m-link m-add m-empty-area__button m--is-unvisited m--is-button m--has-left-icon m--has-content"
      href="#"
      role="button"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="m-icon m-link__icon"
        height="24px"
        width="24px"
      >
        <!---->

        <use
          aria-hidden="true"
          class=""
        />
      </svg>

      <span
        class="m-link__text"
      >

            Add

      </span>

      <!---->
    </a>

    <div
      class="m-empty-area__content-area"
    >
      <svg
        aria-hidden="true"
        class="m-svg m-empty-area__icon"
        height="60px"
        width="60px"
      />

      <div
        class="m-empty-area__title-area"
      >
        <p
          class="m-empty-area__title"
        >
          <strong>
            Prop display-mode = 'block'
          </strong>
        </p>

        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-empty-area Prop Min Height 1`] = `
<div>
  <div
    class="m-empty-area m--is-background-style-light m--is-display-mode-block m--has-button m--has-content-area"
    style="min-height: auto;"
  >
    <a
      class="m-link m-add m-empty-area__button m--is-unvisited m--is-button m--has-left-icon m--has-content"
      href="#"
      role="button"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="m-icon m-link__icon"
        height="24px"
        width="24px"
      >
        <!---->

        <use
          aria-hidden="true"
          class=""
        />
      </svg>

      <span
        class="m-link__text"
      >

            Add

      </span>

      <!---->
    </a>

    <div
      class="m-empty-area__content-area"
    >
      <svg
        aria-hidden="true"
        class="m-svg m-empty-area__icon"
        height="60px"
        width="60px"
      />

      <div
        class="m-empty-area__title-area"
      >
        <p
          class="m-empty-area__title"
        >
          <strong>
            Prop min-height = 'auto'
          </strong>
        </p>

        <!---->
      </div>
    </div>
  </div>

  <div
    class="m-empty-area mu-mt-lg m--is-background-style-light m--is-display-mode-block m--has-button m--has-content-area"
    style="min-height: 400px;"
  >
    <a
      class="m-link m-add m-empty-area__button m--is-unvisited m--is-button m--has-left-icon m--has-content"
      href="#"
      role="button"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="m-icon m-link__icon"
        height="24px"
        width="24px"
      >
        <!---->

        <use
          aria-hidden="true"
          class=""
        />
      </svg>

      <span
        class="m-link__text"
      >

            Add

      </span>

      <!---->
    </a>

    <div
      class="m-empty-area__content-area"
    >
      <svg
        aria-hidden="true"
        class="m-svg m-empty-area__icon"
        height="60px"
        width="60px"
      />

      <div
        class="m-empty-area__title-area"
      >
        <p
          class="m-empty-area__title"
        >
          <strong>
            Prop min-height = '400px'
          </strong>
        </p>

        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-empty-area Prop Subtitle 1`] = `
<div
  class="m-empty-area m--is-background-style-light m--is-display-mode-block m--has-content-area"
  style="min-height: 280px;"
>
  <!---->

  <div
    class="m-empty-area__content-area"
  >
    <!---->

    <div
      class="m-empty-area__title-area"
    >
      <!---->

      <p
        class="m-empty-area__subtitle"
      >

                Prop subtitle

      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-empty-area Prop Svg Name 1`] = `
<div
  class="m-empty-area m--is-background-style-light m--is-display-mode-block m--has-content-area"
  style="min-height: 280px;"
>
  <!---->

  <div
    class="m-empty-area__content-area"
  >
    <svg
      aria-hidden="true"
      class="m-svg m-empty-area__icon"
      height="60px"
      width="60px"
    />

    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-empty-area Prop Svg Size 1`] = `
<div>
  <div
    class="m-empty-area m--is-background-style-light m--is-display-mode-block m--has-content-area"
    style="min-height: 280px;"
  >
    <!---->

    <div
      class="m-empty-area__content-area"
    >
      <svg
        aria-hidden="true"
        class="m-svg m-empty-area__icon"
        height="30px"
        width="30px"
      />

      <div
        class="m-empty-area__title-area"
      >
        <p
          class="m-empty-area__title"
        >
          <strong>
            Prop svg-size = '30px'
          </strong>
        </p>

        <!---->
      </div>
    </div>
  </div>

  <div
    class="m-empty-area mu-mt-lg m--is-background-style-light m--is-display-mode-block m--has-content-area"
    style="min-height: 280px;"
  >
    <!---->

    <div
      class="m-empty-area__content-area"
    >
      <svg
        aria-hidden="true"
        class="m-svg m-empty-area__icon"
        height="80px"
        width="80px"
      />

      <div
        class="m-empty-area__title-area"
      >
        <p
          class="m-empty-area__title"
        >
          <strong>
            Prop svg-size = '80px'
          </strong>
        </p>

        <!---->
      </div>
    </div>
  </div>

  <div
    class="m-empty-area mu-mt-lg m--is-background-style-light m--is-display-mode-block m--has-content-area"
    style="min-height: 280px;"
  >
    <!---->

    <div
      class="m-empty-area__content-area"
    >
      <svg
        aria-hidden="true"
        class="m-svg m-empty-area__icon"
        height="1em"
        width="1em"
      />

      <div
        class="m-empty-area__title-area"
      >
        <p
          class="m-empty-area__title"
        >
          <strong>
            Prop svg-size = '1em'
          </strong>
        </p>

        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-empty-area Prop Title 1`] = `
<div
  class="m-empty-area m--is-background-style-light m--is-display-mode-block m--has-content-area"
  style="min-height: 280px;"
>
  <!---->

  <div
    class="m-empty-area__content-area"
  >
    <!---->

    <div
      class="m-empty-area__title-area"
    >
      <p
        class="m-empty-area__title"
      >
        <strong>
          Prop title
        </strong>
      </p>

      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-empty-area Sandbox 1`] = `
<div
  class="m-empty-area m--is-background-style-light m--is-display-mode-block m--has-button m--has-content-area"
  style="min-height: 280px;"
>
  <a
    class="m-link m-add m-empty-area__button m--is-unvisited m--is-button m--has-left-icon m--has-content"
    href="#"
    role="button"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="m-icon m-link__icon"
      height="24px"
      width="24px"
    >
      <!---->

      <use
        aria-hidden="true"
        class=""
      />
    </svg>

    <span
      class="m-link__text"
    >

            Add

    </span>

    <!---->
  </a>

  <div
    class="m-empty-area__content-area"
  >
    <svg
      aria-hidden="true"
      class="m-svg m-empty-area__icon"
      height="60px"
      width="60px"
    />

    <div
      class="m-empty-area__title-area"
    >
      <p
        class="m-empty-area__title"
      >
        <strong>
          No content available
        </strong>
      </p>

      <!---->
    </div>
  </div>
</div>
`;
